force-app/main/default/objects/Schedule_Day__c/Schedule_Day__c.object-meta.xml
<CustomObject>
    <label>Schedule Day</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Schedule Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>