force-app/main/default/objects/Schedule_Day__c/fields/Release_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Release_DateTime__c</fullName>
    <label>Release Date/Time</label>
    <type>DateTime</type>
</CustomField>