force-app/main/default/objects/Schedule_Day__c/fields/Released_By__c.field-meta.xml
<CustomField>
    <fullName>Released_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Released By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Released Schedule Days</relationshipLabel>
    <relationshipName>Released_Schedule_Days</relationshipName>
    <type>Lookup</type>
</CustomField>