force-app/main/default/objects/Schedule_Day__c/fields/Total_Crews__c.field-meta.xml
<CustomField>
    <fullName>Total_Crews__c</fullName>
    <label>Total Crews</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>