force-app/main/default/objects/Schedule_Day__c/fields/Total_Drive_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Drive_Time_Minutes__c</fullName>
    <label>Total Drive Time (Minutes)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>