force-app/main/default/objects/Schedule_Day__c/fields/Total_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Hours__c</fullName>
    <label>Total Estimated Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>