force-app/main/default/objects/Schedule_Day__c/fields/Total_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Total_Jobs__c</fullName>
    <label>Total Jobs</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>